@@ -80,19 +80,19 @@
                     HintPath = "C:\WINDOWS\Microsoft.NET\Framework\v1.1.4322\System.XML.dll"
                 />
                 <Reference
+                    Name = "Castle.Services.Logging"
+                    Project = "{1AFAEC30-152C-43E2-B37C-E713419D20B8}"
+                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                />
+                <Reference
                     Name = "NLog"
                     AssemblyName = "NLog"
-                    HintPath = "..\lib\NLog.dll"
+                    HintPath = "..\..\..\SharedLibs\nlog\NLog.dll"
                 />
                 <Reference
                     Name = "NLog.DotNet"
                     AssemblyName = "NLog.DotNet"
-                    HintPath = "..\lib\NLog.DotNet.dll"
-                />
-                <Reference
-                    Name = "Castle.Services.Logging"
-                    Project = "{1AFAEC30-152C-43E2-B37C-E713419D20B8}"
-                    Package = "{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}"
+                    HintPath = "..\..\..\SharedLibs\nlog\NLog.DotNet.dll"
                 />
             </References>
         </Build>
