@@ -1,24 +1,0 @@
-using System.Reflection;
-using System.Runtime.CompilerServices;
-
-//
-// General Information about an assembly is controlled through the following 
-// set of attributes. Change these attribute values to modify the information
-// associated with an assembly.
-//
-[assembly: AssemblyTitle("")]
-[assembly: AssemblyDescription("")]
-[assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("")]
-[assembly: AssemblyCopyright("")]
-[assembly: AssemblyTrademark("")]
-[assembly: AssemblyCulture("")]		
-
-[assembly: AssemblyVersion("1.0.0.0")]
-
-#if STRONG
-[assembly: AssemblyDelaySign(false)]
-[assembly: AssemblyKeyFile("../../CastleKey.snk")]
-[assembly: AssemblyKeyName("")]
-#endif
