@@ -9,19 +9,16 @@
 	<property name="name"		  value="Castle.Services.Logging" />
 	<property name="name.log4net" value="${name}.Log4netIntegration" />
 	<property name="name.nlog"    value="${name}.NLogIntegration" />
-	<property name="name.web"     value="${name}.Web" />
 	
 	<property name="test.name" value="${name}.Tests" />
 	
 	<property name="assembly.name" value="${name}.dll" />
-	<property name="assembly.name.web" value="${name.web}.dll" />
 	<property name="assembly.name.nlog" value="${name.nlog}.dll" />
 	<property name="assembly.name.log4net" value="${name.log4net}.dll" />
 	
 	<property name="test.assembly.name" value="${test.name}.dll" />
 	
 	<property name="src.dir" value="${base.dir}/${name}" />
-	<property name="src.web.dir" value="${base.dir}/${name.web}" />
 	<property name="src.nlog.dir" value="${base.dir}/${name.nlog}" />
 	<property name="src.log4net.dir" value="${base.dir}/${name.log4net}" />
 
@@ -50,7 +47,6 @@
 	
 	<target name="copy">
 		<copy file="${bin.dir}/${assembly.name}" todir="../bin" />
-		<copy file="${bin.dir}/${assembly.name.web}" todir="../bin" />
 		<copy file="${bin.dir}/${assembly.name.nlog}" todir="../bin" />
 		<copy file="${bin.dir}/${assembly.name.log4net}" todir="../bin" />
 	</target>
@@ -122,27 +118,6 @@
 			</references>
 		</csc>
 		
-		<csc 
-			define="${strong}"
-			target="library" 
-			debug="${debug}"
-			optimize="${optimize}"
-			output="${bin.dir}/${assembly.name.web}"
-			doc="${bin.dir}/${name.web}.xml">
-			
-			<nowarn>
-				<warning number="1591" />
-				<warning number="1572" />
-			</nowarn>
-			
-			<sources basedir="${src.web.dir}" defaultexcludes="true">
-				<include name="**/*.cs" />
-			</sources>
-
-			<references>
-				<include name="${bin.dir}/*.dll" />
-			</references>
-		</csc>
 	</target>
 
 	<target name="tests.compile" depends="compile">
